crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__unused_params__strict_trace.snap
---
source: crates/nash-codegen/src/optimizer_tests/unused_params.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- core early\\n{}\\n--- core after ANF\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(early), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> trace "body" in used#2 in
helper#3 (trace "argument" in 7) 42
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_3
    [[helper_3
      (force
        [[(force (builtin trace)) (con string "argument")] (delay (con integer 7))])]
      (con integer 42)])
    (lam unused_1
      (lam used_2
        (force [[(force (builtin trace)) (con string "body")] (delay used_2)])))])
--- optimized Core
let arg#7 : int = trace "argument" in 7 in
trace "body" in 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam arg_1 (force [[builtin_2 (con string "body")] (delay (con integer 42))]))
      (force [[builtin_2 (con string "argument")] (delay (con integer 7))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> trace "body" in used#2 in
helper#3 (trace "argument" in 7) 42
--- core early
let helper#3 : int -> int = \used#2 : int -> trace "body" in used#2 in
let arg#4 : int = trace "argument" in 7 in
helper#3 42
--- core after ANF
let helper#3 : int -> int = \used#2 : int -> trace "body" in used#2 in
let arg#4 : int = trace "argument" in 7 in
helper#3 42
--- uplc before
(program 1.1.0
  [(lam helper_3
    [[helper_3
      (force
        [[(force (builtin trace)) (con string "argument")] (delay (con integer 7))])]
      (con integer 42)])
    (lam unused_1
      (lam used_2
        (force [[(force (builtin trace)) (con string "body")] (delay used_2)])))])
--- uplc after
(program 1.1.0
  [(lam helper_3
    [(lam arg_4 [helper_3 (con integer 42)])
      (force
        [[(force (builtin trace)) (con string "argument")] (delay (con integer 7))])])
    (lam used_2
      (force [[(force (builtin trace)) (con string "body")] (delay used_2)]))])
--- result
(con integer 42)
--- logs
["argument", "body"]
